4-Construccion-orquestacion-contenedores/7-Scheduling-seguridad/15-upgrade/k8s/3-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: intro-k8s-ingress
  namespace: intro-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: diplodevops.example
    http:
      paths:
      - path: /uptime-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: uptime-app-service
            port:
              number: 8080
